dist/1.0/bin/sample/retrieveUnpackaged/objects/Simplified_Order__c.object
<CustomObject>
    <fields>
        <fullName>Service_Notification_Subject__c</fullName>
        <description>Service Notification Email&apos;s Subject</description>
        <inlineHelpText>Service Notification Email&apos;s Subject</inlineHelpText>
        <label>Service Notification Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Simplified_Product__c</fullName>
        <description>Product</description>
        <inlineHelpText>Product</inlineHelpText>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>ADSL_SMART</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADSL_RAPID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADSL_RAPID_PLUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP_HLAS_0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP_HLAS_200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP_HLAS_500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP_HLAS_1200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP_HLAS_PARTNER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HLAS_CS_PLUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HLAS_CS_100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HLAS_CS_333</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HLAS_CS_500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HLAS_CS_PARTNER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIRTUAL_FAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TELECONFERENCE8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TELECONFERENCE16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TELECONFERENCE30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-MAIL_BOX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP_OFFICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIALUP_DOMA_PLUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIALUP_DOMA_VOLNO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIALUP_FANATIK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIALUP_PROFI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIALUP_PROFI_PLUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADSL_WS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADSL_WS_DATA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADSL_WS_FLAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADSL_WS_FLAT_FUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIALUP_DOMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSL_4_VOICE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Billing_Date__c</fullName>
        <description>Start Billing Date</description>
        <inlineHelpText>Start Billing Date</inlineHelpText>
        <label>Start Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status for Simplified Order</description>
        <inlineHelpText>Status for Simplified Order</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Prepared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type</description>
        <inlineHelpText>Type</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Civil service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_Reg_Address_For_Corr__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use Registration Address</description>
        <inlineHelpText>Use Registration Address</inlineHelpText>
        <label>Use Registration Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Registration_Address_As_Invoicing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use Registration Address as Invoicing Address</description>
        <inlineHelpText>Use Registration Address as Invoicing Address</inlineHelpText>
        <label>Use Registration Address</label>
        <type>Checkbox</type>
    </fields>
    <label>Simplified Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Detailed_List</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Account__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Detailed List</label>
    </listViews>
    <nameField>
        <displayFormat>SOR{000000000}</displayFormat>
        <label>Simplified Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Simplified Orders</pluralLabel>
    <recordTypes>
        <fullName>Modification</fullName>
        <active>true</active>
        <description>Simplified Orders for modifications</description>
        <label>Modification</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Installation</fullName>
        <active>true</active>
        <description>Simplified Orders for New Installation</description>
        <label>New Installation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Registration_Number_GTS_Slovakia</fullName>
        <active>false</active>
        <description>Turned of based on https://helpdeskce.in.gtsce.com/browse/GSSS-303</description>
        <errorConditionFormula>AND(!ISBLANK(Identification_No__c ) ,OR(NOT(ISNUMBER( Identification_No__c  )), LEN(Identification_No__c ) != 8 ))</errorConditionFormula>
        <errorDisplayField>Identification_No__c</errorDisplayField>
        <errorMessage>Company Registration Number must consist of 8 digits. Remove all spaces, dashes or other special characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_User_Modification</fullName>
        <active>true</active>
        <description>Blocks modification of Sales User field after</description>
        <errorConditionFormula>AND( ISCHANGED( Sales_User__c ), NOT( ISPICKVAL( Status__c , &apos;New&apos;) ))</errorConditionFormula>
        <errorDisplayField>Sales_User__c</errorDisplayField>
        <errorMessage>Sales User can be modified only before Simplified Order preparation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tax_Id_Validation</fullName>
        <active>false</active>
        <description>https://helpdeskce.in.gtsce.com/browse/GSSS-303</description>
        <errorConditionFormula>AND(!ISBLANK(CRD_Tax_Identification_Number__c ) ,OR(NOT( LEN(CRD_Tax_Identification_Number__c 
) = 10), NOT(REGEX(CRD_Tax_Identification_Number__c 
 , &quot;[0-9]{10}&quot;))))</errorConditionFormula>
        <errorDisplayField>CRD_Tax_Identification_Number__c</errorDisplayField>
        <errorMessage>Tax Identification Number format is incorrect. It should be 10 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VAT_Number_Validation</fullName>
        <active>false</active>
        <description>https://helpdeskce.in.gtsce.com/browse/GSSS-303</description>
        <errorConditionFormula>AND(!ISBLANK(CRD_VAT_Number__c) ,OR(NOT( BEGINS( CRD_VAT_Number__c  , &apos;SK&apos;) ), NOT( LEN(CRD_VAT_Number__c ) = 12), NOT(REGEX(CRD_VAT_Number__c , &quot;SK[0-9]{10}&quot;))))</errorConditionFormula>
        <errorDisplayField>CRD_VAT_Number__c</errorDisplayField>
        <errorMessage>VAT Number format is incorrect. It should be SK0000000000 (SK prefix and 10 digits)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>mobile_phone_number</fullName>
        <active>true</active>
        <errorConditionFormula>!BEGINS(  Contact_Mobile__c , &quot;+&quot;)</errorConditionFormula>
        <errorDisplayField>Contact_Mobile__c</errorDisplayField>
        <errorMessage>Phone number should start with &quot;+&quot; and be in international format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>phone_number</fullName>
        <active>true</active>
        <errorConditionFormula>!BEGINS( Contact_Phone__c , &quot;+&quot;)</errorConditionFormula>
        <errorDisplayField>Contact_Phone__c</errorDisplayField>
        <errorMessage>Phone number should start with &quot;+&quot; and be in international format.</errorMessage>
    </validationRules>
</CustomObject>